@@ -121,10 +121,23 @@ object Common {
             libraryDependencies ++= all.cats,
             libraryDependencies ++= all.bcprov,
             libraryDependencies ++= all.h2,
-            libraryDependencies ++= all.circe
+            libraryDependencies ++= all.circe,
+            libraryDependencies ++= all.scalecube,
+            libraryDependencies ++= all.betterfiles
           )
       def apply(id: String): Project = apply(id, id)
       def apply(): Project           = apply("interpreter")
     }
+  }
+
+  val defaultShellScript: Seq[String] = defaultShellScript(
+    Seq(
+      "-Dio.netty.tryReflectionSetAccessible=true"
+    )
+  )
+
+  def defaultShellScript(javaOpts: Seq[String] = Seq.empty): Seq[String] = {
+    val javaOptsString = javaOpts.map(_ + " ").mkString
+    Seq("#!/usr/bin/env sh", s"""exec java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -jar $javaOptsString$$JAVA_OPTS "$$0" "$$@"""", "")
   }
 }
